<resources>
    <string name="app_name">Carbon Tracker</string>
    <string name="app_version">1.0.0</string>

    <!-- splash -->
    <string name="continue_to_dashboard">Continue to dashboard</string>
    <string name="start_a_new_journey">Start a New Journey</string>

    <!-- dashboard -->
    <string name="dashboard_welcome_message">Dashboard</string>
    <string name="carbon_overview">Carbon Overview</string>
    <string name="all_journeys">Your Latest Journeys</string>
    <string name="all_utilities">Your Latest Utilities</string>
    <string name="fab_label_utility">New Utility</string>
    <string name="fab_label_journey">New Journey</string>

    <string name="chart_type">Daily Carbon Usage</string>
    <string name="chart_radio_monthly">Monthly</string>
    <string name="chart_radio_daily">Daily ▾</string>
    <string name="chart_radio_yearly">Yearly</string>

    <string name="tip_message">Tip Message Goes Here</string>


    <!-- journeys -->
    <string name="route_name">Route Name</string>
    <string name="distance_on_highway">Distance on Highway (km)</string>
    <string name="distance_in_city">Distance in City (km)</string>

    <string name="car_name">Car Name</string>
    <string name="car_make">Car Make</string>
    <string name="year">Year</string>
    <string name="select_route_hold_to_edit_or_delete">Select Route:</string>
    <string name="would_you_like_to_save_this_route">Would you like to save this route?</string>
    <string name="car_s_name">Car\'s Name</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="select_car_type">Select Car Type:</string>
    <string name="main_car">Main Car:</string>
    <string name="route">Route:</string>
    <string name="select_car_hold_to_edit">Select Car:</string>
    <string name="add_transportation">Add Transportation</string>
    <string name="transmission">Transmission:</string>
    <string name="fuel">Fuel,</string>
    <string name="engindisplacement">Engine Displacement:</string>
    <string name="please_name_your_car">Please Name Your Car</string>
    <string name="please_select_your_car">Please Select a Car</string>
    <string name="this_car_already_exist">This Car Already Exists</string>
    <string name="car_cliked">Car Clicked:</string>
    <string name="add_route">Add Route</string>
    <string name="destroy">Destroy</string>
    <string name="test">test</string>
    <string name="car_collection">car collection:</string>
    <string name="test2">test2</string>
    <string name="please_complete_info">Please complete info</string>
    <string name="Distance_must_contain_only_numbers">Distance must contain only numbers</string>
    <string name="This_Route_Already_Exist">This Route Already Exists!</string>
    <string name="save_route">Save Route</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="save">Save</string>
    <string name="bus_journey">Bus Journey</string>
    <string name="journey">Journey</string>
    <string name="utility">Utility</string>
    <string name="new_journey">New Journey</string>
    <string name="clicked_journey">Clicked Journey</string>
    <string name="Transmission">Transmission</string>
    <string name="Edit_Route">Edit Route</string>
    <string name="Please_complete_info">Please_complete_info</string>
    <string name="Distancemust_contain_only_numbers">Distancemust contain only numbers</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Daily_Carbon_Usage">Daily Carbon Usage</string>
    <string name="Last_28_days">This Month</string>
    <string name="Monthly_Carbon_Usage">Monthly Carbon Usage</string>
    <string name="Last_365_days">This Year</string>
    <string name="Annual_Carbon_Usage">Annual Carbon Usage</string>
    <string name="Utility">Utility</string>
    <string name="total_CO2">Total CO₂</string>
    <string name="journey_co2">Journey CO₂</string>
    <string name="ulityli_co2">Utility CO₂</string>
    <string name="total_co2">Total CO₂</string>
    <string name="utility_CO2">Utility CO₂</string>
    <string name="kg_co2">kg CO₂</string>
    <string name="clickedjourney">Clicked Journey</string>
    <string name="menuselect">menu_select</string>
    <string name="Edit_Journeys_Car">Edit Journey\'s Car</string>
    <string name="select_car">Select Car</string>
    <string name="DELECTED">DELETED</string>
    <string name="Edit_Journeys_Route">Edit Journey\'s Route</string>
    <string name="Select_Route">Select Route</string>
    <string name="km_on_Highway">km on Highway</string>
    <string name="km_in_the_City">km in the City</string>
    <string name="EDIT">EDIT</string>
    <string name="Select_Transportation">Select Transportation</string>
    <string name="Select_Track_Type">Select Track Type</string>
    <string name="Transportation">Transportation</string>
    <string name="Food">Food</string>
    <string name="Electricity">Electricity</string>
    <string name="Expo_Line">Expo Line</string>
    <string name="Millennium_Line">Millennium Line</string>
    <string name="Canada_Line">Canada Line</string>
    <string name="Amount_of_Electricity_Used">Amount of Electricity Used (KWh):</string>
    <string name="Amount_of_Natural_Gas_Used">Amount of Natural Gas Used (Gj):</string>
    <string name="WALK">Walk</string>
    <string name="bike">Bike</string>
    <string name="car_name2">Car Name</string>
    <string name="eg_family_car">Eg. Family Car</string>
    <string name="select_car_type2">Select Car Type</string>
    <string name="eg_sfu_surrey">Eg. SFU Surrey</string>
    <string name="bus_number_name">Bus Number/Name:</string>
    <string name="distance_travelled_km">Distance Travelled (km):</string>
    <string name="select_date">Select Date</string>
    <string name="save2">save</string>
    <string name="transportation_details">Transportation Details</string>
    <string name="eg_family_car2">Eg. Family Car</string>
    <string name="eg_sfu_surrey2">Eg. SFU Surrey</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="walk_bike">walk/bike</string>
    <string name="skytrain">Skytrain</string>
    <string name="start_at_startion">Start At Startion:</string>
    <string name="end_at_station">End At Station:</string>
    <string name="select_billing_type">Select Billing Type</string>
    <string name="electricity">Electricity</string>
    <string name="natural_gas">Natural Gas</string>
    <string name="amount_of_electricty_used_gj">Amount of Electricty Used (Gj):</string>
    <string name="amount_of_people_in_house">Amount of People in House:</string>
    <string name="from">From:</string>
    <string name="set_date">Set Date</string>
    <string name="to">To:</string>
    <string name="set_date2">Set Date</string>
    <string name="description">Description:</string>
    <string name="type_of_transportation">Type of Transportation:</string>
    <string name="walk">walk</string>
    <string name="bike2">bike</string>
    <string name="distance_travelled">Distance Travelled:</string>
    <string name="car_trip">Car Trip</string>
    <string name="utility_tip">Utility Tip!</string>
    <string name="journey_tip">Journey Tip!</string>
    <string name="select_transit_line">Select Transit Line:</string>
    <string name="add">add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">confirm</string>
    <string name="decline">decline</string>
    <string name="edit_transportation">Edit Transportation</string>
    <string name="edit_route">Edit Route</string>
    <string name="edit_date">Edit Date</string>
    <string name="delete_journey">Delete Journey</string>
    <string name="confirmtrip">Confirm Trip</string>
    <string name="Journey_Data">Journey Data</string>
    <string name="Edit_Transportation">Edit Transportation</string>
    <string name="SkyTrain_Journey">SkyTrain Journey</string>
    <string name="Walk_Bike_Journey">Walk/Bike Journey</string>

    <string name="about_us_link">Version X.X.X \nAbout this app ►</string>
    <string name="about_us_info">This app was created in 2017 for CMPT 276 (Denim) at Simon Fraser University.</string>

    <string name="target">The Canadian Target needed to meet the Paris Accord is currently</string>
    <string name="target_day">32.79 kg of CO₂ per day</string>
    <string name="target_month">997.5 kg of CO₂ per month</string>
    <string name="target_year">11970 kg of CO₂ per year</string>
    <string name="utilitydata">Utility Data</string>
    <string name="tooooo">to</string>
    <string name="electro">Electricity</string>
    <string name="gasssss">Natural Gas</string>
    <string name="editcontext">edit</string>
    <string name="deletecontext">delete</string>

</resources>
