<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="72dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="32dp"
    tools:context="com.as3.parmjohal.carbontracker.UI.AddCarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/carName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/route_name"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/editRouteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Eg. SFU Surrey"
            android:inputType="text"
            android:textColorHint="@color/colorSubtitle"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/distanceHighway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/distance_on_highway"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/editHighwayDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="Eg. 25"
            android:inputType="numberSigned"
            android:textColorHint="@color/colorSubtitle" />

        <TextView
            android:id="@+id/distanceCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/distance_in_city"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/editCityDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="Eg. 25"
            android:inputType="numberSigned"
            android:textColorHint="@color/colorSubtitle" />

    </LinearLayout>
</RelativeLayout>
