<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.as3.parmjohal.carbontracker.UI.AddCarActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="36dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:text="Car Name"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/eg_family_car2"
                android:inputType="text"
                android:textColorHint="@color/colorSubtitle"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/carMake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editName"
                    android:layout_alignBottom="@+id/editName"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"

                    android:text="@string/make"
                    android:textColor="@color/colorPrimary" />

                <Spinner
                    android:id="@+id/makeSpinner"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/editName"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/carModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/carName"
                    android:layout_below="@+id/carName"
                    android:layout_marginTop="20dp"

                    android:layout_weight="1"
                    android:text="@string/model"
                    android:textColor="@color/colorPrimary" />

                <Spinner
                    android:id="@+id/modelSpinner"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/yearSpinner"
                    android:layout_below="@+id/yearSpinner"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/carYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/carMake"
                    android:layout_below="@+id/yearSpinner"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/year"
                    android:textColor="@color/colorPrimary" />

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/makeSpinner"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="36dp"
            android:text="Select Car Type"
            android:textColor="@color/colorPrimary" />

        <ListView
            android:id="@+id/carList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</RelativeLayout>
